[gd_scene load_steps=7 format=4 uid="uid://d3r5ujcawxlbt"]

[ext_resource type="Texture2D" uid="uid://dbxsk38mu0hbk" path="res://isometric_tiles.png" id="1_fof8m"]
[ext_resource type="Script" path="res://main.gd" id="1_xpy6d"]
[ext_resource type="Theme" uid="uid://dx0iaf1bhus87" path="res://grid_theme.tres" id="3_0bld2"]
[ext_resource type="Texture2D" uid="uid://bprhcmc03hmut" path="res://icon.svg" id="4_hs85w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_popd8"]
texture = ExtResource("1_fof8m")
texture_region_size = Vector2i(96, 96)
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ew7tj"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(96, 48)
sources/3 = SubResource("TileSetAtlasSource_popd8")

[node name="Main" type="Node2D"]
script = ExtResource("1_xpy6d")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAP3/AwAAAAAAAAAIAP7/AwAAAAAAAAAIAP//AwAAAAAAAAAIAAAAAwAAAAAAAAAIAAEAAwAAAAAAAAAIAAIAAwAAAAAAAAAIAAMAAwAAAAAAAAAIAAQAAwAAAAAAAAAJAP3/AwAAAAAAAAAJAP7/AwAAAAAAAAAJAP//AwAAAAAAAAAJAAAAAwAAAAAAAAAJAAEAAwAAAAAAAAAJAAIAAwAAAAAAAAAJAAMAAwAAAAAAAAAJAAQAAwAAAAAAAAAKAP3/AwAAAAAAAAAKAP7/AwAAAAAAAAAKAP//AwAAAAAAAAAKAAAAAwAAAAAAAAAKAAEAAwAAAAAAAAAKAAIAAwAAAAAAAAAKAAMAAwAAAAAAAAAKAAQAAwAAAAAAAAALAP3/AwAAAAAAAAALAP7/AwAAAAAAAAALAP//AwAAAAAAAAALAAAAAwAAAAAAAAALAAEAAwAAAAAAAAALAAIAAwAAAAAAAAALAAMAAwAAAAAAAAALAAQAAwAAAAAAAAAMAP3/AwAAAAAAAAAMAP7/AwAAAAAAAAAMAP//AwAAAAAAAAAMAAAAAwAAAAAAAAAMAAEAAwAAAAAAAAAMAAIAAwAAAAAAAAAMAAMAAwAAAAAAAAAMAAQAAwAAAAAAAAANAP3/AwAAAAAAAAANAP7/AwAAAAAAAAANAP//AwAAAAAAAAANAAAAAwAAAAAAAAANAAEAAwAAAAAAAAANAAIAAwAAAAAAAAANAAMAAwAAAAAAAAANAAQAAwAAAAAAAAAOAP3/AwAAAAAAAAAOAP7/AwAAAAAAAAAOAP//AwAAAAAAAAAOAAAAAwAAAAAAAAAOAAEAAwAAAAAAAAAOAAIAAwAAAAAAAAAOAAMAAwAAAAAAAAAOAAQAAwAAAAAAAAAPAP3/AwAAAAAAAAAPAP7/AwAAAAAAAAAPAP//AwAAAAAAAAAPAAAAAwAAAAAAAAAPAAEAAwAAAAAAAAAPAAIAAwAAAAAAAAAPAAMAAwAAAAAAAAAPAAQAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_ew7tj")

[node name="MouseHover" type="Polygon2D" parent="."]
visible = false
position = Vector2(384, 217)
color = Color(1, 0.266667, 1, 0.494118)
polygon = PackedVector2Array(-48, 0, 0, -24, 48, 0, 0, 24)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_0bld2")

[node name="PlayerTurn" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.5
offset_top = 25.0
offset_right = 88.5
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Player 1 Turn"

[node name="Player1" type="Sprite2D" parent="."]
position = Vector2(578, 456)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_hs85w")

[node name="Player2" type="Sprite2D" parent="."]
position = Vector2(578, 119)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_hs85w")

[node name="Options" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Options"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 230.0
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 500

[node name="VBoxContainer" type="VBoxContainer" parent="Options/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MoveBtn" type="Button" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Move Piece"

[connection signal="button_up" from="Options/MarginContainer/VBoxContainer/MoveBtn" to="." method="_on_move_btn_button_up"]
